# lab-stock-with-eda-architecture

./: .gitignore  .importlinter  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
scripts/: lint.sh  test_unit.sh
src/stock/domain/entities/: batch.py  order.py  product.py
src/stock/domain/exceptions/: out_of_stock.py
src/stock/domain/repositories/: batch_repository.py
src/stock/domain/services/: allocate.py
src/stock/domain/value_objects/: order_line.py
tests/unit/stock/domain/entities/: test_batch.py
