[project]
name = "lab-stock-with-eda-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.14",
]
lint = [
    "import-linter>=2.9",
    "ruff>=0.14.14",
]
test = [
    "pytest>=9.0.2",
]
